# PythonWEB_hw10_1

./: .gitignore  pyproject.toml
hw10_project/: db.sqlite3  manage.py
hw10_project/hw10_project/: asgi.py  settings.py  urls.py  wsgi.py
hw10_project/quotes/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
hw10_project/quotes/migrations/: 0001_initial.py  0002_alter_quote_author_alter_quote_tags.py  0003_alter_tag_name.py
hw10_project/quotes/static/quotes/: style.css
hw10_project/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  author_for_tag.html  base.html  index.html  tag.html  top_tags.html
hw10_project/quotes/templatetags/: extract.py
hw10_project/users/: models.py  urls.py  views.py
hw10_project/users/migrations/: 0001_initial.py
hw10_project/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
hw10_project/utils/: authors.json  migration.py
