[tool.poetry]
name = "pythonweb-hw10"
version = "0.1.0"
description = ""
authors = ["basilegupov <basilegupov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.5"
pillow = "^10.3.0"
mongoengine = "^0.28.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
